; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_gf100.c_gf100_ltc_cbc_clear.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_gf100.c_gf100_ltc_cbc_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_ltc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gf100_ltc_cbc_clear(%struct.nvkm_ltc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.nvkm_ltc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.nvkm_device*, align 8
  store %struct.nvkm_ltc* %0, %struct.nvkm_ltc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %4, align 8
  %9 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.nvkm_device*, %struct.nvkm_device** %10, align 8
  store %struct.nvkm_device* %11, %struct.nvkm_device** %7, align 8
  %12 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @nvkm_wr32(%struct.nvkm_device* %12, i32 1566924, i32 %13)
  %15 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @nvkm_wr32(%struct.nvkm_device* %15, i32 1566928, i32 %16)
  %18 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  %19 = call i32 @nvkm_wr32(%struct.nvkm_device* %18, i32 1566920, i32 4)
  ret void
}

declare dso_local i32 @nvkm_wr32(%struct.nvkm_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
